# fcwtfp

./: .env  .gitignore  Cargo.toml
bot/: Cargo.toml
bot/src/: city.rs  event.rs  main.rs  sync.rs  tech.rs
bot/src/command/: city.rs  mod.rs  tech.rs
common/: Cargo.toml
common/src/: lib.rs  tech.rs
common/src/backend/: mod.rs
common/src/backend/session/: city.rs  member.rs  mod.rs  tech.rs
common/src/session/: city.rs  member.rs  mod.rs  tech.rs
migrations/: 20241016000000_init.sql
server/: Cargo.toml  Dioxus.toml
server/src/: main.rs
server/src/api/session/: member.rs  mod.rs  tech.rs
server/src/backend/session/: member.rs  mod.rs  tech.rs
server/src/core/session/: member.rs  mod.rs  tech.rs
server/src/frontend/: router.rs
server/src/frontend/generic/: message.rs  mod.rs
server/src/frontend/session/: home.rs  mod.rs
server/src/frontend/session/member/: add.rs  home.rs  mod.rs  remove.rs
server/src/frontend/session/tech/: home.rs  mod.rs  set.rs  state.rs
src/: main.rs
src/api/session/: member.rs  tech.rs
src/backend/: mod.rs
src/backend/session/: member.rs  tech.rs
src/core/: mod.rs
src/core/session/: member.rs
src/frontend/: mod.rs
src/frontend/generic/: loading.rs
src/frontend/session/: create.rs  home.rs  join.rs
src/frontend/session/member/: add.rs  home.rs  mod.rs  remove.rs
src/frontend/session/tech/: home.rs  set.rs
src/session/: create.rs  home.rs  join.rs  member.rs  mod.rs
src/storage/: mod.rs
src/storage/session/: member.rs  mod.rs
src/tech/: home.rs
