[workspace]
resolver = "2"
members = [
    "server"
]


[workspace.package]
version = "0.1.0"

# dependencies that are shared across packages
[workspace.dependencies]
thiserror = "1.0.63"
bon = "2.1.1"
uuid = { version = "1.10.0", features = ["v4", "fast-rng"] }
sqlx = { version = "0.8.2", features = [ "sqlite", "runtime-tokio" ] }
strum = "0.26"
strum_macros = "0.26"
