[package]
name = "common"
version = { workspace = true }
authors = ["Bastien Sevajol <contact@bux.fr>"]
edition = "2021"


[dependencies]
uuid = { workspace = true, optional = true }
poise = { workspace = true, optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
sqlx = { workspace = true, optional = true }
bon = { workspace = true }

[features]
backend = ["dep:poise", "dep:sqlx", "dep:uuid"]