[package]
name = "server"
version = { workspace = true }
authors = ["Bastien Sevajol <contact@bux.fr>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }

serde = { version = "1.0.197", features = ["derive"] }
dioxus = { version = "0.5", features = ["fullstack", "router"] }
tokio = { version = "1.40.0", optional = true }

thiserror = { workspace = true }
bon = { workspace = true }
uuid = { workspace = true, optional = true }
sqlx = { workspace = true, optional = true }
strum = { workspace = true }
strum_macros = { workspace = true }

# Debug
dioxus-logger = "0.5.1"

[features]
default = []
server = ["dioxus/axum", "sqlx", "tokio", "dep:uuid"]
web = ["dioxus/web"]
